Build: Adicionando lombok e log4j

--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,19 @@ repositories {
     mavenCentral()
 }
 
+ext {
+    log4jVersion = '2.22.1'
+    lombokVersion = '1.18.30'
+    junitVersion = '5.9.1'
+}
+
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation "org.apache.logging.log4j:log4j-core:$log4jVersion"
+    implementation "org.apache.logging.log4j:log4j-api:$log4jVersion"
+    annotationProcessor "org.projectlombok:lombok:$lombokVersion"
+    compileOnly "org.projectlombok:lombok:$lombokVersion"
+    testImplementation platform("org.junit:junit-bom:$junitVersion")
+    testImplementation "org.junit.jupiter:junit-jupiter"
 }
 
 test {
