Feat: Criando métodos para validar mais de um campo de uma vez

--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 group = 'br.com.lbenaducci'
-version = '1.0.0'
+version = '1.1.0'
 
 java {
     toolchain {
@@ -24,10 +24,12 @@ ext {
 dependencies {
     implementation "org.apache.logging.log4j:log4j-core:$log4jVersion"
     implementation "org.apache.logging.log4j:log4j-api:$log4jVersion"
+    implementation 'net.jodah:typetools:0.4.1'
     annotationProcessor "org.projectlombok:lombok:$lombokVersion"
     compileOnly "org.projectlombok:lombok:$lombokVersion"
     testImplementation platform("org.junit:junit-bom:$junitVersion")
     testImplementation "org.junit.jupiter:junit-jupiter"
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.10.0'
 }
 
 test {
